# flashes

./: CLAUDE.md  LICENSE  README.md  index.html  styles.css
.github/workflows/: gh-pages.yml
flashlighte.rs/: Cargo.toml  build.sh
flashlighte.rs/batteries/: Cargo.toml
flashlighte.rs/batteries/src/: batteries.rs  lib.rs  utils.rs
flashlighte.rs/flashlight/: Cargo.toml
flashlighte.rs/flashlight/src/: camera.rs  engine.rs  lib.rs
flashlighte.rs/pathfinder/: Cargo.toml
flashlighte.rs/pathfinder/src/: lib.rs  pathfinde.rs
www/: .gitignore  build.js  package-lock.json  package.json  tsconfig.json
www/flashes-server/: Cargo.toml
www/flashes-server/src/: game.rs  main.rs  maps.rs  messages.rs
www/flashes-server/src/handlers/: health.rs  mod.rs  websocket.rs
www/src/: PeerConnectionManager.ts  announcements.ts  constants.ts  getCellDelta.ts  globalAPI.ts  index.ts  maps.ts  render.ts  state.ts  storage.ts  utils.ts
