[workspace]
resolver = "2"

members = ["batteries", "flashlight", "pathfinder"]

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.69"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
shadowcaster = "0.3.4"
wasm-bindgen = "0.2.92"
yrs = { version = "0.23.5", features = ["sync"] }
web-sys = { version = "0.3.77", features = ["console"] }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
debug = 2
panic = "abort"
strip = "debuginfo"
