[package]
name = "flashes-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
shuttle-axum = "0.56.0"
shuttle-runtime = "0.56.0"

tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
uuid = { version = "1.4", features = ["serde", "v4"] }

